linkedin-learning/devops-courses/k8s-for-app-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example.com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: blue-green.example.com
      http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: blue
                port:
                  number: 80
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: green
                port:
                  number: 80
    - host: nginx.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
